syntax = "proto3";

option java_package = "ca.wise.weather.proto";
option csharp_namespace = "WISE.WeatherProto";
option java_multiple_files = true;

import "wtime.proto";
import "math.proto";
import "geography.proto";
import "google/protobuf/wrappers.proto";

package WISE.WeatherProto;


message WeatherGridFilter {
    int32 version = 1;

    HSS.Times.WTime startTime = 2;
    HSS.Times.WTime endTime = 3;
    HSS.Times.WTimeSpan startTimeOfDay = 4;
    HSS.Times.WTimeSpan endTimeOfDay = 5;

    GridTypeOne temperature = 6;
    GridTypeOne rh = 7;
    GridTypeOne precipitation = 8;
    GridTypeOne windSpeed = 9;
    GridTypeTwo windDirection = 10;

    oneof shape {
        Geography.GeoPoly polygons = 11;
        string filename = 12;
        bool landscape = 13;
    }

    optional string name = 14;      // not really optional but need to be able to suppress it in the old file format
    optional string comments = 15;
    optional uint32 color = 16; // types are consistent with the Project versions, but no longer consistent with what's in the Fire object - resolve for consistency
    optional uint64 size = 17;

    message GridTypeOne {
        int32 version = 1;

        Math.Double value = 2;
        Operation operation = 3;

        enum Operation {
            Equal = 0;
            Plus = 1;
            Minus = 2;
            Multiply = 3;
            Divide = 4;
            Disable = 5;
        }
    }

    message GridTypeTwo {
        int32 version = 1;

        oneof val {
            Math.Double value = 2;
            Direction direction = 3;
        }
        Operation operation = 4;

        enum Operation {
            Equal = 0;
            Plus = 1;
            Minus = 2;
            Disable = 3;
        }

        enum Direction {
            NORTH = 0;
            NORTH_EAST = 1;
            EAST = 2;
            SOUTH_EAST = 3;
            SOUTH = 4;
            SOUTH_WEST = 5;
            WEST = 6;
            NORTH_WEST = 7;
        }
    }
}